# DelphiAST-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo_py/: parser_demo.py  project_indexer_demo.py
fixtures/Test/Snippets/: DeprecatedOnConst.pas  VariantRecordFieldAttributes.pas  alignedrecords.pas  constset.pas  deprecatedtype.pas  dottedtypes.pas  endtoken.pas  experimentals.pas  externalfunction.pas  finalizationinitializationexports.pas  forwardoverloaded.pas  forwardwithoutsemicolon.pas  genericconstraints.pas  genericinterfacemethoddelegation.pas  implementsgenerictype.pas  includefile.pas  isnotnotin.pas  messagemethod.pas  multiline.pas  nonalignedrecords.pas  noreturn.pas  numbers.pas  pointerchars.pas  properties.pas  strictvisibility.pas  ternaryop.pas  (+2 more)
scripts/: generate_golden.py  generate_golden_from_pascal.sh
src/delphiast/: __init__.py  ast_builder.py  classes.py  consts.py  native.py  project_indexer.py  simpleparser_ex.py  writer.py  xml_codec.py
tests/: conftest.py  test_demo_smoke.py  test_include_and_error.py  test_parse_all_snippets.py  test_project_indexer_demo_project.py  test_xml_golden.py
tests/expected_xml/: DeprecatedOnConst.xml  VariantRecordFieldAttributes.xml  alignedrecords.xml  constset.xml  deprecatedtype.xml  dottedtypes.xml  endtoken.xml  experimentals.xml  externalfunction.xml  finalizationinitializationexports.xml  forwardoverloaded.xml  forwardwithoutsemicolon.xml  genericconstraints.xml  genericinterfacemethoddelegation.xml  implementsgenerictype.xml  includefile.xml  isnotnotin.xml  messagemethod.xml  multiline.xml  nonalignedrecords.xml  noreturn.xml  numbers.xml  pointerchars.xml  properties.xml  strictvisibility.xml  ternaryop.xml  tryexcept.xml  umlauts.xml  whitespacearoundifdefcondition.xml
(+31 files in other folders)
